--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
         
 
         <div class="person-card">
-          <img class="person-avatar" src="avatar_hu9921604987552610930.jpg" alt="Abdoulaye Ndiaye">
+          <img class="person-avatar" src="avatar_hu9921604987552610930.jpeg" alt="Abdoulaye Ndiaye">
           <div class="person-info">
             <h3 class="person-name">Ayesha Kiani</h3>
             <p class="person-title">Chief Operating Officer at MNNC Group and NYU faculty</p>
