--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
               NYU Blockchain & Fintech is a student organization focused on the bringing opportunities to stundents through connection with sectors through speaker, recruiting, and networking events. 
             </p>
             <div class="featured-image-container" style="height: 200px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 1rem;">
-              <img src="/api/placeholder/400/200" alt="Blockchain Economics" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+              <img src="/api/placeholder/400/200" alt="Logos1" style="max-width: 100%; max-height: 100%; object-fit: contain;">
             </div>
             <a href="#" class="talk-link" style="display: inline-block; margin-top: 1rem;">Learn More</a>
           </div>
@@ -696,7 +696,7 @@
               NYU Blockchain Lab is a student organization aiming to bring Blockchain and Distributed Ledger Technology to New York University.
             </p>
             <div class="featured-image-container" style="height: 200px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 1rem;">
-              <img src="/api/placeholder/400/200" alt="Decentralized Finance" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+              <img src="/api/placeholder/400/200" alt="Logos2" style="max-width: 100%; max-height: 100%; object-fit: contain;">
             </div>
             <a href="#" class="talk-link" style="display: inline-block; margin-top: 1rem;">Learn More</a>
           </div>
