--- a/index.html
+++ b/index.html
@@ -690,10 +690,9 @@
             <h3 style="font-size: 1.5rem; color: var(--primary-dark); margin-bottom: 1rem;"><a href="https://www.nyublockchainlab.xyz">NYU Blockchain Lab</a></h3>
             <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
               We collaborate with the Student Club NYU Blockchain Lab, which maintains partnerships with these industry organizations:
-            </p>
-            <div class="featured-image-container" style="height: 200px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 1rem;">
-              <img src="Logos2.png" style="max-width: 100%; max-height: 100%; object-fit: contain;">
-            </div>
+            </p><div class="featured-image-container" style="height: 200px; background-color: #ffffff; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 1rem; border: none;">
+	  <img src="Logos2.png" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+		</div>
           </div>
         </div>
       </div>
