--- a/index.html
+++ b/index.html
@@ -676,12 +676,12 @@
       <div class="featured-container" style="display: flex; gap: 2rem; flex-wrap: wrap;">
         <!-- First Featured Box -->
         <div class="featured-box" style="flex: 1; min-width: 300px; background-color: white; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); overflow: hidden; transition: all 0.3s ease;">
-          <div class="featured-content" style="padding: 2rem;">
-            <h3 style="font-size: 1.5rem; color: var(--primary-dark); margin-bottom: 1rem;"><a href="https://nyubnf.com">NYU Stern Blockchain & Fintech</a></h3>
-            <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
-              NYU Stern Blockchain & Fintech is a student organization focused on the bringing opportunities to stundents through connection with sectors through speaker, recruiting, and networking events. 
-            </p>
-          </div>
+	<div class="featured-content" style="padding: 2rem; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+	  <h3 style="font-size: 1.5rem; color: var(--primary-dark); margin-bottom: 1rem;"><a href="https://nyubnf.com">NYU Stern Blockchain & Fintech</a></h3>
+	  <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
+	    NYU Stern Blockchain & Fintech is a student organization focused on the bringing opportunities to students through connection with sectors through speaker, recruiting, and networking events. 
+	  </p>
+	</div>
         </div>
         
         <!-- Second Featured Box -->
