--- a/index.html
+++ b/index.html
@@ -680,16 +680,18 @@
 	  <h3 style="font-size: 1.5rem; color: var(--primary-dark); margin-bottom: 1rem;"><a href="https://nyubnf.com">NYU Stern Blockchain & Fintech</a></h3>
 	  <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
 	    NYU Stern Blockchain & Fintech is a student organization focused on the bringing opportunities to students through connection with sectors through speaker, recruiting, and networking events. 
-	  </p>
+	  </p><div class="featured-image-container" style="height: 200px; background-color: #ffffff; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 1rem; border: none;">
+	  <img src="logo_nyu_blockchain_fintech.webp" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+		</div>
 	</div>
         </div>
         
         <!-- Second Featured Box -->
         <div class="featured-box" style="flex: 1; min-width: 300px; background-color: white; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); overflow: hidden; transition: all 0.3s ease;">
           <div class="featured-content" style="padding: 2rem;">
-            <h3 style="font-size: 1.5rem; color: var(--primary-dark); margin-bottom: 1rem;"><a href="https://www.nyublockchainlab.xyz">NYU Blockchain Lab</a></h3>
+            <h3 style="font-size: 1.5rem; color: var(--primary-dark); margin-bottom: 1rem;"><a href="https://www.nyublockchainlab.xyz">NYU Blockchain Lab -- Student Events</a></h3>
             <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
-              We collaborate with the Student Club NYU Blockchain Lab, which maintains partnerships with multiple industry organizations:
+              NYU Blockchain Lab — Student Events connects students with the ideas, people, and tools shaping the future of blockchain and distributed ledger technology. In partnership with:
             </p><div class="featured-image-container" style="height: 200px; background-color: #ffffff; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 1rem; border: none;">
 	  <img src="Logos2.png" style="max-width: 100%; max-height: 100%; object-fit: contain;">
 		</div>
@@ -702,7 +704,7 @@
   <!-- Talks Section -->
   <section id="talks" class="section">
     <div class="container">
-      <h2 class="section-title">Talks</h2>
+      <h2 class="section-title">Research Talks and Discussions</h2>
       <div class="talk-list">
         <!-- Talk 1 -->
         <div class="talk-card">
